@@ -26,8 +26,36 @@
  * @package PersistentObject
  * @access private
  */
-interface ezcPersistentIdentifierGenerator
+abstract class ezcPersistentIdentifierGenerator
 {
+
+    /**
+     * Check if the object is persistent already
+     *
+     * Called in the beginning of the save process.
+     *
+     * Persistent objects that are being saved must not exist in the database already.
+     *
+     * The default implementation checks if the id is null.
+     * This is suitable for all implementations where the id is generated by
+     * the database or by the implementation of preSave().
+     *
+     * @param ezcPersistentObjectDefinition $def
+     * @param array(key=>value)
+     * @return void
+     */
+    public function checkPersistence( ezcPersistentObjectDefinition $def, array $state )
+    {
+        $idValue = $state[$def->idProperty->propertyName];
+
+        // check that this object is stored to db already
+        if ( $idValue !== null )
+        {
+            return true;
+        }
+        return false;
+    }
+
     /**
      * Called prior to executing the insert query that saves the data to the database.
      *
@@ -38,7 +66,7 @@ interface ezcPersistentIdentifierGenerator
      * @param ezcQueryInsert $q
      * @return void
      */
-    public function preSave( ezcPersistentObjectDefinition $def, ezcDbHandler $db, ezcQueryInsert $q );
+    abstract public function preSave( ezcPersistentObjectDefinition $def, ezcDbHandler $db, ezcQueryInsert $q );
 
     /**
      * Returns the integer value of the generated identifier for the new object.
@@ -50,7 +78,7 @@ interface ezcPersistentIdentifierGenerator
      * @param ezcDbHandler $db
      * @return int
      */
-    public function postSave( ezcPersistentObjectDefinition $def, ezcDbHandler $db );
+    abstract public function postSave( ezcPersistentObjectDefinition $def, ezcDbHandler $db );
 }
 
 ?>
