@@ -3,7 +3,8 @@
 	
 - Fixed #7884: ezcPersistentSession sometimes triggers PDO "General error:
   2014" exceptions.
-
+- Fixed #8042: PersistentObject requires use of database id counter.
+	
 
 1.0.1 - Monday 20 February 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
